Fix for panel container z-index

--- a/scss/furatto/_panel.scss
+++ b/scss/furatto/_panel.scss
@@ -6,7 +6,6 @@
   left: 0;
   width: auto;
   height: auto;
-  z-index: 2;
   -webkit-overflow-scrolling: touch;
   padding-top: $navbar-height;
 }
